--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello world! This is homepage of junghwan11
+<!DOCTYPE html>
+<html>
+  <head>
+   <body>
+     <h1>Hello world! This is homepage of junghwan11</h1>
+    </body>
+    </html>
+  
+   
+
